--- a/i18n/locales/gb/translations.json
+++ b/i18n/locales/gb/translations.json
@@ -21,5 +21,8 @@
     "cookie-accept-reject": "Reject",
     "cookie-accept-necessary": "Strictly necessary cookies (always on)",
     "audio-transcript": "Download transcript",
-    "error404": "The page you are looking for cannot be found"    
+    "error404": "The page you are looking for cannot be found",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "warning": "Warning!"  
 }
